# ChinaMobile_demo

./: .env  .gitignore  .pre-commit-config.yaml  README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: config.py  main.py  prompt.py
backend/src/crud/: __init__.py  base.py  crud_conversations.py  crud_messages.py
backend/src/db/: models.py  session.py
backend/src/routers/: ai.py  moi.py
backend/src/schemas/: __init__.py  ai.py  conversations.py
backend/src/services/: llm_client.py  moi_client.py
backend/src/utils/: logger.py  parse_file_utils.py
deploy/: MakeFile  docker-compose.yml
deploy/script/: init-sql.sql
frontend/: Dockerfile  nginx.conf  nginx.conf.template  package.json  vite.config.ts
frontend/src/components/MessageBubble/: index.tsx
frontend/src/config/: index.ts
frontend/src/utils/: moiApi.ts  webSearch.ts  wordExport.ts
